src/objects/SystemParam__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>HachushoMeisaiMaxNum__c</fullName>
        <defaultValue>5</defaultValue>
        <label>発注書明細最大行数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JuchuMeisaiIkkatsuTsuikaJogen__c</fullName>
        <defaultValue>35</defaultValue>
        <label>受注明細一括追加上限</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JuchuMeisaiSaidaiHidokiTorokusu__c</fullName>
        <defaultValue>70</defaultValue>
        <label>受注明細最大登録数（非同期引当用）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JuchuMeisaiSaidaiTorokusu__c</fullName>
        <defaultValue>35</defaultValue>
        <label>受注明細最大登録数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NohinshoFontSize__c</fullName>
        <defaultValue>14</defaultValue>
        <label>納品書品名フォントサイズ</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NohinshoFooter__c</fullName>
        <defaultValue>&quot;システム設定　株式会社　XYZ&quot;</defaultValue>
        <label>納品書フッタ</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NohinshoLineByteNum__c</fullName>
        <defaultValue>160</defaultValue>
        <label>納品書品名改行バイト数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NohinshoMeisaiMaxNum__c</fullName>
        <defaultValue>18</defaultValue>
        <label>納品書明細最大行数</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SeikyushoAtesakiHidariChoseiMm__c</fullName>
        <defaultValue>19</defaultValue>
        <label>請求書宛先左余白調整(mm)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SeikyushoAtesakiUeChoseiMm__c</fullName>
        <defaultValue>3</defaultValue>
        <label>請求書宛先上余白調整(mm)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SeikyushoMeisaiMaxNum__c</fullName>
        <defaultValue>36</defaultValue>
        <label>請求書明細最大行数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SeikyushoTitleShitaChoseiMm__c</fullName>
        <defaultValue>20</defaultValue>
        <label>請求書タイトル下余白調整(mm)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SeikyushoTitleUeChoseiMm__c</fullName>
        <defaultValue>10</defaultValue>
        <label>請求書タイトル上余白調整(mm)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shohizeiritsu__c</fullName>
        <defaultValue>0.08</defaultValue>
        <label>消費税率</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>システム設定</label>
</CustomObject>